--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 .DS_Store
 Practice/counter/pubspec.lock
+Practice/flow_test/pubspec.lock
+Practice/instagram/pubspec.lock
+Practice/wrap_test/pubspec.lock
